updating homepage hero removing parallax issues rendering on mobile devices

--- a/public/assets/stylesheets/styles.css
+++ b/public/assets/stylesheets/styles.css
@@ -56,6 +56,14 @@ nav {
   font-size: 12px;
 }
 
+.hero {
+  width: 100%;
+  min-height: 50vh;
+  position: relative;
+  background: url('../images/hero.jpg') no-repeat center center fixed;
+  background-size: cover;
+}
+
 main {
   flex: 1 0 auto;
 }
